apps/faro-landing/production/scope-1/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faro-landing
  namespace: faro-landing-production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - faro-landing-production-1.faro.run
        - faro.run
      secretName: faro-landing-production-1-tls
  rules:
    - host: faro-landing-production-1.faro.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faro-landing
                port:
                  number: 80
    - host: faro.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faro-landing
                port:
                  number: 80
